# claw

./: .drone.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
bench/: README.md  gen_tasks.py
bench/grader/: Cargo.toml
bench/grader/src/: exec.rs  lib.rs  realc.rs
bench/grammars/: gen-add100-v0.gbnf  gen-atleast100-v0.gbnf  gen-atmost4-v1.gbnf  gen-mul4-v2.gbnf  gen-nat_max-comm.gbnf  gen-plat-catfile.gbnf  ho-both-positive.gbnf  ho-greet.gbnf  ho-guard-dec.gbnf  ho-js-min3.gbnf  ho-pick.gbnf  ho-quadruple.gbnf  ho-tell-twice.gbnf
bench/runner/src/: lib.rs  main.rs
bench/tasks/: contract-003.json  from-scratch-001.json  from-scratch-007.json  from-scratch-008.json  translate-001.json
bench/tasks-holdout/: ho-area.json  ho-banner.json  ho-both-positive.json  ho-clamp01.json  ho-even-double.json  ho-fresh-add.json  ho-greet.json  ho-guard-dec.json  ho-headroom.json  ho-home-len.json  ho-inc3.json  ho-js-min3.json  ho-label-len.json  ho-larger.json  ho-neither-zero.json  ho-next-even.json  ho-pick.json  ho-pure-note.json  ho-py-relu.json  ho-quadruple.json  ho-shout.json  ho-shrink.json  ho-succ-sqr.json  ho-tell-twice.json  ho-tip.json
bench/tasks-large/: gen-add1-v0.json  gen-add1-v1.json  gen-add1-v2.json  gen-add10-v0.json  gen-add10-v1.json  gen-add10-v2.json  gen-add100-v0.json  gen-add100-v1.json  gen-add100-v2.json  gen-add2-v0.json  gen-add2-v1.json  gen-add2-v2.json  gen-add3-v0.json  gen-add3-v1.json  gen-add3-v2.json  gen-add4-v0.json  gen-add4-v1.json  gen-add4-v2.json  gen-add5-v0.json  gen-add5-v1.json  gen-add5-v2.json  gen-add7-v0.json  gen-add7-v1.json  gen-add7-v2.json  gen-addmax.json  gen-addmin.json  gen-atleast1-v0.json  gen-atleast1-v1.json  gen-atleast1-v2.json  gen-atleast10-v0.json  gen-atleast10-v1.json  gen-atleast10-v2.json  gen-atleast100-v0.json  gen-atleast100-v1.json  gen-atleast100-v2.json  gen-atleast2-v0.json  gen-atleast2-v1.json  gen-atleast2-v2.json  gen-atleast3-v0.json  gen-atleast3-v1.json  (+71 more)
cdb/: README.md
cdb/src/: lib.rs
cli/: Cargo.toml
cli/src/: ai.rs  main.rs
compiler/: README.md  build.zig
compiler/ci/: tidy.zig
compiler/src/: shim_host_abi.zig
compiler/src/backend/: mod.zig
compiler/src/base/: Ident.zig  LowLevel.zig  SmallStringInterner.zig  StringLiteral.zig  mod.zig  parallel.zig  signal_handler.zig  source_utils.zig  stack_overflow.zig  target.zig
compiler/src/builtins/: compiler_rt_128.zig  crypto.zig  dec.zig  dev_wrappers.zig  erased_callable.zig  extern_static_lib.zig  extern_static_lib_core.zig  fuzz_sort.zig  hash.zig  host_abi.zig  list.zig  main.zig  native_runtime_libcalls.zig  num.zig  numeric_conversions.zig  sort.zig  str.zig  utils.zig
compiler/src/bundle/: mod.zig
compiler/src/canonicalize/: BuiltinLowLevel.zig  CIR.zig  Can.zig  ClawEmitter.zig  Diagnostic.zig  Expression.zig  ModuleEnv.zig  NodeStore.zig  Pattern.zig  Statement.zig  TypeAnnotation.zig  mod.zig
compiler/src/check/: Check.zig  checked_artifact.zig  const_store.zig  occurs.zig  report.zig  snapshot.zig
compiler/src/cli/: CliProblem.zig  ReplSession.zig  builder.zig  cli_args.zig  linker.zig  (+7 more)
constraint-server/: README.md
constraint-server/src/: gbnf.rs  lib.rs
contract/: Cargo.toml
contract/src/: eval.rs  lib.rs  parse.rs  property.rs
corpus/: Cargo.toml
corpus/src/: lib.rs
docs/: baseline-2026-07-03.md  benchmark-harness.md  e4b-experiment-2026-07-05.md  ecosystem.md  fork-strategy.md  getting-started.md  holdout-a2-realcompile-2026-07-05.md  inheritance-audit.md  master-plan.md  mcp.md  networking.md  p2-spec.md  p4-gate-2026-07-04.md  registry-playground-plan.md  releasing.md  syntax.md  telemetry.md
editors/vscode/: .gitignore  README.md  language-configuration.json  package.json
effects/: Cargo.toml
effects/src/: lib.rs
emit-rust/: Cargo.toml
emit-rust/src/: lib.rs
examples/: math.claw  wallet.claw
examples/crm/: README.md  domain.claw
examples/crm/service/: Cargo.toml
examples/crm/service/src/: main.rs
launch/: maharashtra-press.md  media-master.md  press-release-hi.html  press-release-letterhead.html  press-release-mr.html
lsp/: Cargo.toml
lsp/src/: main.rs
mcp/: Cargo.toml
mcp/src/: main.rs
playground/: index.html
registry/: README.md  index.json
registry/service/: Cargo.toml
registry/service/src/: main.rs
scripts/: package.sh
site/: index.html  llms.txt  playground.html  robots.txt  sitemap.xml
site/pkg/: achuk_play.js
telemetry/src/: lib.rs
telemetry/worker/: index.js  package-lock.json  wrangler.toml
train/: README.md  a2_eval.py  adapter_config.json  corpus-full.jsonl  corpus.jsonl  distilled.jsonl  eval_gate_batched.py  merge_lora.py  outputs-a2-holdout.jsonl  outputs-a2-large.jsonl  outputs-e4b-holdout.jsonl  outputs-e4b-large.jsonl  outputs-holdout.jsonl  outputs-large.jsonl  parity_gen.py  requirements.txt  train.py  train_e4b.py
(+157 files in other folders)
