[package]
name = "claw-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "claw-mcp"
path = "src/main.rs"

[dependencies]
claw-core = { path = "../crates/claw-core" }
claw-cdb = { path = "../cdb" }
claw-constraint = { path = "../constraint-server" }
claw-bench-grader = { path = "../bench/grader" }
serde_json = { workspace = true }
anyhow = { workspace = true }
