# Standalone — the Claw package registry (npmjs.com-style).
[workspace]

[package]
name = "claw-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
claw-core = { path = "../../crates/claw-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
